2018-01-07  Araki Ken  <arakiken@users.sf.net>

	* ui_picture.c: cleanup_inline_pictures() checks DRCS-SIXEL.

	* vt_drcs.h: vt_drcs_has_picture() is added.

	* vt_pty.c: vt_pty_new_with() doesn't call vt_config_menu_init() if pty is NULL.

	* quartz/ui_imagelib.c: ui_imagelib_load_file() resizes a loaded image.

2018-01-06  Araki Ken  <arakiken@users.sf.net>

	* gdiplus.cpp: Sixel graphics is resized to specified width and height.

	* vt_parser.c: Minor fixes.

2018-01-06  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2: Updated.

	* vt_parser.c:
	  - define_drcs_picture() is added.
	  - "Pan;Pad;Ph;Pv is processed in receiving DRCS-Sixel sequence, and
	    image pieces is scaled according to Pcmw/Pcmh and Ph/Pv.

	* vterm.c: "Pan;Pad;Ph;Pv is output unless DRCS_SIXEL=old environmental
	  variable is defined.

2018-01-03  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2: Updated.

	* ui_font_config.c: ui_font_config_dump() outputs "_FULLWIDTH".

	* vterm.c: Pcmw and Pcmh in DECDLD are correctly set.

2018-01-02  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2, libvterm/README: Updated.

	* vterm.c: Adjusting vterm->drcs_charset and vterm->drcs_plane is placed
	  before DRCS-SIXEL sequence is output.

2018-01-01  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2: Updated.

	* vterm.c: col_size_of_width_a is 1 if locale is ja_XX.XX.

2017-12-31  Araki Ken  <arakiken@users.sf.net>

	* DRCS-SIXEL-v2: Updated.

	* vterm.c:
	  - q"%d;%d;%d;%d in sixel to be sent to terminal emulator as DRCS-Sixel is
	    skipped.
	  - 0x30-0x3f is accepted as vterm->drcs_charset.
	  - "DRCS_SIXEL_VERSION" environmental varaible is dropped and "DRCS_SIXEL=old"
	    is used.

	* vt_parser.c:
	  - 0x30-0x3f character set is accepted for drcs.
	  - Sixel sequence (in DRCS) which doesn't contain 'q' is accepted.
	  - "drcs_sixel_version" is dropped and "old_drcs_sixel" is added to OSC 5379-5381.

	* vt_drcs.[ch]: 0x30-0x3f character set is accepted.
